16433
Using scala-2.10.0.r25759-b20110929023607, compiling the following:

{code}
case class Token(text: String, startIndex: Int)

object Comment {

  def unapply(s: String): Option[Token] = None

}

object HiddenTokens {

  "foo" match { case Comment(_) => }

}
{code}

Gives the error:
{noformat}
Comment.scala:11: error: wrong number of arguments for object Comment
  "foo" match { case Comment(_) => }
                            ^
one error found
{noformat}
